--- a/index.html
+++ b/index.html
@@ -1,36 +1,171 @@
-<script>
-    const translations = {
-        en: {
-            status: "928,472 Perspectives Live",
-            question: "Global Sensation: <br><span style='color: var(--accent);'>[ECONOMIC_SHIFT]</span>",
-            sync: "SYNC_RATE",
-            nodes: "ACTIVE_NODES",
-            countries: "COUNTRIES",
-            dir: "ltr"
-        },
-        ar: {
-            status: "928,472 منظور حي الآن",
-            question: "الإحساس العالمي الحالي: <br><span style='color: var(--accent);'>[تحول_اقتصادي]</span>",
-            sync: "معدل المزامنة",
-            nodes: "العقد النشطة",
-            countries: "دولة",
-            dir: "rtl"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GRID_01 | Collective Intuition</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;700&family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --bg: #000000;
+            --accent: #00f2ff;
+            --text: #ffffff;
+            --grid-color: rgba(0, 242, 255, 0.05);
         }
-    };
 
-    let currentLang = 'en';
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-    function switchLanguage(lang) {
-        currentLang = lang;
-        const t = translations[lang];
-        document.body.dir = t.dir;
-        document.getElementById('status').innerText = t.status;
-        document.getElementById('question').innerHTML = t.question;
-        document.getElementById('sync-text').innerText = t.sync;
-        document.getElementById('nodes-text').innerText = t.nodes;
-        document.getElementById('country-text').innerText = t.countries;
+        body {
+            background-color: var(--bg);
+            color: var(--text);
+            font-family: 'Space Grotesk', sans-serif;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            transition: all 0.5s ease;
+        }
+
+        /* شبكة الخلفية المتحركة لجميع المتصفحات */
+        .background-grid {
+            position: fixed;
+            top: 0; left: 0;
+            width: 200%; height: 200%;
+            background-image: 
+                linear-gradient(var(--grid-color) 1px, transparent 1px),
+                linear-gradient(90deg, var(--grid-color) 1px, transparent 1px);
+            background-size: 50px 50px;
+            z-index: -1;
+            animation: moveGrid 30s linear infinite;
+        }
+
+        @keyframes moveGrid {
+            from { transform: translate(0, 0) rotate(-10deg); }
+            to { transform: translate(-50px, -50px) rotate(-10deg); }
+        }
+
+        .main-container { text-align: center; z-index: 10; padding: 20px; }
+
+        .status-header {
+            font-size: 0.8rem;
+            letter-spacing: 5px;
+            color: var(--accent);
+            margin-bottom: 25px;
+            text-transform: uppercase;
+        }
+
+        .main-question {
+            font-size: clamp(1.5rem, 5vw, 2.8rem);
+            font-weight: 700;
+            margin-bottom: 50px;
+            line-height: 1.3;
+        }
+
+        /* الكرة التفاعلية - قلب النظام */
+        .intuition-sphere {
+            width: clamp(120px, 30vw, 180px);
+            height: clamp(120px, 30vw, 180px);
+            background: radial-gradient(circle, var(--accent) 0%, transparent 75%);
+            border-radius: 50%;
+            margin: 0 auto;
+            cursor: pointer;
+            border: 1px solid rgba(0, 242, 255, 0.2);
+            animation: pulse 4s infinite ease-in-out;
+            transition: 0.3s;
+        }
+
+        .intuition-sphere:hover {
+            box-shadow: 0 0 80px rgba(0, 242, 255, 0.4);
+            transform: scale(1.05);
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); opacity: 0.4; }
+            50% { transform: scale(1.1); opacity: 0.8; }
+        }
+
+        /* اللغات */
+        .lang-switch {
+            position: fixed; top: 20px; right: 20px;
+            display: flex; gap: 10px; z-index: 100;
+        }
+
+        .lang-btn {
+            background: transparent; border: 1px solid #333;
+            color: white; padding: 5px 12px; border-radius: 5px;
+            cursor: pointer; font-size: 0.7rem;
+        }
+
+        .lang-btn:hover { border-color: var(--accent); }
+
+        .stats-footer {
+            margin-top: 60px;
+            display: flex; justify-content: center; gap: 30px;
+            font-size: 0.7rem; letter-spacing: 2px; color: #555;
+        }
+
+    </style>
+</head>
+<body id="body">
+
+    <div class="lang-switch">
+        <button class="lang-btn" onclick="setLang('en')">EN</button>
+        <button class="lang-btn" onclick="setLang('ar')">AR</button>
+    </div>
+
+    <div class="background-grid"></div>
+
+    <div class="main-container">
+        <div class="status-header" id="status-text">928,472 Perspectives Live</div>
         
-        // تغيير الخط بناءً على اللغة لضمان الجودة البصرية
-        document.body.style.fontFamily = lang === 'ar' ? "'Cairo', sans-serif" : "'Space Grotesk', sans-serif";
-    }
-</script>
+        <h1 class="main-question" id="main-q">
+            Global Sensation: <br>
+            <span style="color: var(--accent);">[ECONOMIC_SHIFT]</span>
+        </h1>
+
+        <div class="intuition-sphere" onclick="handleInput()"></div>
+
+        <div class="stats-footer">
+            <div id="sync">SYNC_RATE: 98.2%</div>
+            <div id="nodes">ACTIVE_NODES: 142</div>
+        </div>
+    </div>
+
+    <script>
+        const content = {
+            en: {
+                status: "928,472 PERSPECTIVES LIVE",
+                q: "Global Sensation: <br><span style='color: #00f2ff;'>[ECONOMIC_SHIFT]</span>",
+                sync: "SYNC_RATE: 98.2%",
+                nodes: "ACTIVE_NODES: 142",
+                dir: "ltr",
+                font: "'Space Grotesk', sans-serif"
+            },
+            ar: {
+                status: "928,472 منظور حي الآن",
+                q: "الإحساس العالمي الحالي: <br><span style='color: #00f2ff;'>[تحول_اقتصادي]</span>",
+                sync: "معدل المزامنة: 98.2%",
+                nodes: "العقد النشطة: 142",
+                dir: "rtl",
+                font: "'Cairo', sans-serif"
+            }
+        };
+
+        function setLang(l) {
+            const data = content[l];
+            document.getElementById('body').dir = data.dir;
+            document.getElementById('body').style.fontFamily = data.font;
+            document.getElementById('status-text').innerText = data.status;
+            document.getElementById('main-q').innerHTML = data.q;
+            document.getElementById('sync').innerText = data.sync;
+            document.getElementById('nodes').innerText = data.nodes;
+        }
+
+        function handleInput() {
+            // تحويل المستخدم لرابط الدفع الخاص بـ Stripe (Sandbox حالياً)
+            window.location.href = "https://buy.stripe.com/test_8x2fZhcoCbnC26l3C77ss00";
+        }
+    </script>
+</body>
+</html>
